Took out angular-google-maps, replaced it with the most excellent angular-leaflet-directive.  A far superior solution with no visible browser compatibility issues.  Life is good

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -225,7 +225,7 @@ h1 {
 
 //MAP.HTML
 
-.angular-google-map-container {
+.angular-leaflet-map {
     border-radius: 1ex;
     height: 60vh;
     width: 100%;
